--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^4.0.1",
-    "electron-reload": "^1.4.0"
+    "electron-reload": "^1.4.0",
+    "mongodb": "^3.1.10"
   }
 }
