--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^4.0.1",
-    "mongodb": "^3.1.10"
+    "electron": "^4.0.1",    
+    "nedb": "^1.8.0"
   }
 }
