--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "IngresosMensuales",
+  "productName": "Cash Flow",
   "version": "1.0.0",
-  "description": "",
+  "description": "Entrada y salida de dinero durante los meses",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron src/index.js"
+    "start": "electron src/index.js",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . Cash-Flow --overwrite --asar=true --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Cash Flow\"",
+    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "keywords": [],
-  "author": "",
+  "author": "Claudio Roca",
   "license": "ISC",
   "dependencies": {
-    "electron": "^4.0.1",    
+    "electron": "^4.0.1",
+    "electron-packager": "^13.0.1",
     "nedb": "^1.8.0"
   }
 }
